--- a/app/views/pages/_chatCard.html.erb
+++ b/app/views/pages/_chatCard.html.erb
@@ -6,9 +6,9 @@
       <h2>Multi Channel Messaging App</h2>
       <p><i>Web app built with Rails & React allowing users to select a channel and join that channels' messages.</i></p>
       <div class="card-action">
-       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#chat-modal">
+      <!--  <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#chat-modal">
           View More
-        </button>
+        </button> -->
         <a href=" https://chat-rails-redux.herokuapp.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
       </div>
     </div>
