--- a/app/views/pages/_apartmentCard.html.erb
+++ b/app/views/pages/_apartmentCard.html.erb
@@ -6,9 +6,9 @@
       <h2>Apartment Selector</h2>
       <p><i>Web app built with React allowing users to select an apartment and displaying the apartments location on the map.</i></p>
       <div class="card-action">
-       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#apartment-modal">
+      <!--  <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#apartment-modal">
           View More
-        </button>
+        </button> -->
         <a href="https://ryanmansfield.github.io/react-flats/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
       </div>
     </div>
