--- a/app/views/pages/_cocktailCard.html.erb
+++ b/app/views/pages/_cocktailCard.html.erb
@@ -6,9 +6,9 @@
       <h2>Cocktail Recipe Book</h2>
       <p><i>Web app built with Rails.  This app allows a user to create a cocktail, and add ingredients to it.</i></p>
       <div class="card-action">
-       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#cocktail-modal">
+     <!--   <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#cocktail-modal">
           View More
-        </button>
+        </button> -->
         <a href="https://mister-ryan-cocktail.herokuapp.com/cocktails" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
       </div>
     </div>
