--- a/app/views/pages/_fauxtographyCard.html.erb
+++ b/app/views/pages/_fauxtographyCard.html.erb
@@ -6,9 +6,9 @@
       <h2>Fauxtography Marketplace</h2>
       <p><i>Web app built with Rails.  The app brings photographers and clients together by letting clients view photographers profiles and book photo sessions with them.</i></p>
       <div class="card-action">
-       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#fauxtography-modal">
+     <!--   <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#fauxtography-modal">
           View More
-        </button>
+        </button> -->
         <a href="http://fauxtography.herokuapp.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
       </div>
     </div>
