--- a/app/views/pages/_giphyCard.html.erb
+++ b/app/views/pages/_giphyCard.html.erb
@@ -6,9 +6,9 @@
       <h2>Giphy Search</h2>
       <p><i>Web app built with React allowing users to search for giphys, select a giphy from the searh results and display the selected giphy.</i></p>
       <div class="card-action">
-       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#giphy-modal">
+   <!--     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#giphy-modal">
           View More
-        </button>
+        </button> -->
         <a href="https://ryanmansfield.github.io/react-gifs/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
       </div>
     </div>
