--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,8 @@
   <div class="nav-links">
     <a class="nav-link" href="#bio">About</a>
     <a class="nav-link" href="#portfolio">Portfolio</a>
-    <%= link_to "Resume", "/ryanmansfield-cv.pdf", target: "blank", class: "nav-link" %>
+    <%= link_to "Resume", asset_path('ryanmansfield-cv.pdf'), target: "blank", class: "nav-link" %>
+
   </div>
   <div class="container">
     <h1>Ryan Mansfield</h1>
