--- a/app/views/pages/_nightRouletteModal.html.erb
+++ b/app/views/pages/_nightRouletteModal.html.erb
@@ -1,23 +1,45 @@
 <div class="modal fade" id="night-roulette-modal" tabindex="-1" role="dialog" aria-labelledby="night-roulette-modal" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-container">
       <div class="carousel-container">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1558980395-be8a5fcb4251?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80" alt="First slide">
+              <div class="caousel-image">
+                <%= image_tag("nr-form.png", :class => "d-block w-100", :alt => "First slide") %>
+              </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1584740589285-98bc41b6a6a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80" alt="Second slide">
+              <div class="caousel-image">
+                <%= image_tag("nr-order.png", :class => "d-block w-100", :alt => "Second slide") %>
+              </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://images.unsplash.com/photo-1581092160607-ee22621dd758?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="Third slide">
+              <div class="caousel-image">
+                <%= image_tag("nr-driver.png", :class => "d-block w-100", :alt => "Third slide") %>
+              </div>
             </div>
+            <div class="carousel-item">
+              <div class="caousel-image">
+                <%= image_tag("nr-share.png", :class => "d-block w-100", :alt => "Fourth slide") %>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="caousel-image">
+                <%= image_tag("nr-arrive.png", :class => "d-block w-100", :alt => "Fifth slide") %>
+              </div>
+            </div>
+
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
