modal template complete

--- a/app/assets/stylesheets/components/_project-modal.scss
+++ b/app/assets/stylesheets/components/_project-modal.scss
@@ -1,5 +1,17 @@
-.modal-container {
+
+
+.modal-content {
   padding: 16px;
   background-color: $gray;
 }
+
+
+
+.carousel-image {
+  height: 400px;
+  margin: auto;
+  background-color: #262625;
+  padding: 8px;
+}
+
 
