modal content template added to all projects

--- a/app/views/pages/_fauxtographyModal.html.erb
+++ b/app/views/pages/_fauxtographyModal.html.erb
@@ -1,9 +1,66 @@
 <div class="modal fade" id="fauxtography-modal" tabindex="-1" role="dialog" aria-labelledby="fauxtography-modal" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-        <h1>test</h1>
-        <button>test</button>
+      <div class="carousel-container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="carousel-image">
+                <%= image_tag("nr-form.png", :class => "d-block carousel-image", :alt => "First slide") %>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <%= image_tag("nr-order.png", :class => "d-block carousel-image", :alt => "Second slide") %>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <%= image_tag("nr-driver.png", :class => "d-block carousel-image", :alt => "Third slide") %>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <%= image_tag("nr-share.png", :class => "d-block carousel-image", :alt => "Fourth slide") %>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-image">
+                <%= image_tag("nr-arrive.png", :class => "d-block carousel-image", :alt => "Fifth slide") %>
+              </div>
+            </div>
 
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="modal-info">
+        <h3>What I did</h3>
+        <p><i>  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</i></p>
+        <h3>What I learned</h3>
+        <p><i>  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</i></p>
+
+      </div>
+      <div class="modal-actions">
+        <a href="https://github.com/ryanmansfield/night_roulette" target="_blank" class="btn btn-flat" class="btn btn-flat">View Code </a>
+      </div>
     </div>
   </div>
 </div>
