Contact form added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,6 +69,10 @@
 <%= render 'nightRouletteModal' %>
 <%= render 'tsunamiModal' %>
 
+<div class="contact">
+  <%= render template:'contacts/new' %>
+</div>
+
 <!-- Footer Section -->
 <div class="footer">
   <div class="footer-links">
