cinemakers card added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,12 +48,11 @@
 <div class="portfolio">
   <h2 id="portfolio">Past projects</h2>
   <div class="cards">
+    <%= render 'cinemakersCard' %>
     <%= render 'nightRouletteCard' %>
     <%= render 'fauxtographyCard' %>
-    <%= render 'cocktailCard' %>
-    <%= render 'giphyCard' %>
-    <%= render 'apartmentCard' %>
     <%= render 'chatCard' %>
+    <%= render 'cocktailCard' %>
   </div>
 </div>
 
