--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,9 +2,17 @@
   <h3>Send me a message</h3>
 
   <%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
-    <%= f.input :name, :required => true %>
-    <%= f.input :email, :required => true %>
-    <%= f.input :message, :as => :text, :required => true %>
+    <div class="row">
+      <div class="col">
+        <%= f.input :name, label: false, placeholder: 'name', :required => true%>
+
+      </div>
+      <div class="col">
+        <%= f.input :email, label: false, placeholder: 'email', :required => true %>
+
+      </div>
+    </div>
+    <%= f.input :message, label: false, placeholder: 'message', :as => :text, :required => true, input_html: { :rows => 10 } %>
     <div class= "hidden">
       <%= f.input :nickname, :as => :hidden %>
     </div>
