--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,37 +57,36 @@
 </div>
 
 <!-- Contact Section -->
-<div class="contact" id="contact">
+<div class="contact-section" id="contact">
   <div class="contact-form-container">
 
     <%= render template:'contacts/new' %>
   </div>
-  <div class="contact-info">
+  <div class="contacts">
 
-    <form action="mailto:ryanmansfield86@gmail.com" method="GET" target="_blank">
-      <button type="submit" class="email-icon"> <i class="fas fa-envelope-open-text"></i></button>
-    </form>
-     <h6>Email</h6>
-    <p>ryan@ryan.io</p>
+    <div class="contact">
+      <a href="mailto:ryan@ryanmansfield.io.com" class='social-links'><i class="fas fa-envelope-open-text"> Email</i></a>
+      <p>ryan@ryanmansfield.io</p>
+    </div>
 
-    <a href="https://www.linkedin.com/in/ryan-mansfield86/" target="_blank" class="social-links">
-      <i class="fab fa-linkedin"></i>
-    </a>
-    <h6>LinkedIn</h6>
-    <p>https://www.linkedin.com/in/ryan-mansfield86/</p>
-
-    <a href="https://github.com/ryanmansfield" target="_blank" class="social-links">
-      <i class="fab fa-github-square"></i>
-    </a>
-     <h6>LinkedIn</h6>
-    <p>https://www.linkedin.com/in/ryan-mansfield86/</p>
-
-    <a href="https://facebook.com/Mansfield.Ryan" target="_blank" class="social-links">
-      <i class="fab fa-facebook-square"></i>
-    </a>
-     <h6>LinkedIn</h6>
-    <p>https://www.linkedin.com/in/ryan-mansfield86/</p>
-
+    <div class="contact">
+      <a href="https://www.linkedin.com/in/ryan-mansfield86/" target="_blank" class="social-links">
+        <i class="fab fa-linkedin"> LinkedIn</i>
+      </a>
+      <p>https://www.linkedin.com/in/ryan-mansfield86</p>
+    </div>
+    <div class="contact">
+      <a href="https://github.com/ryanmansfield" target="_blank" class="social-links">
+        <i class="fab fa-github-square"> GitHub</i>
+      </a>
+      <p>https://github.com/ryanmansfield</p>
+    </div>
+    <div class="contact">
+      <a href="https://facebook.com/Mansfield.Ryan" target="_blank" class="social-links">
+        <i class="fab fa-facebook-square"> Facebook</i>
+      </a>
+      <p>https://facebook.com/Mansfield.Ryan</p>
+    </div>
   </div>
 </div>
 
