--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -81,7 +81,11 @@ h4 {
   margin-top: auto;
 }
 
-
+.contact-info {
+  height: 70vh;
+  margin-bottom: auto;
+  margin-top: auto;
+}
 
 .contacts {
   margin-top: 96px;
