button style fixed

--- a/app/views/pages/_nightRouletteCard.html.erb
+++ b/app/views/pages/_nightRouletteCard.html.erb
@@ -9,10 +9,11 @@
      <!--   <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#night-roulette-modal">
           View More
         </button> -->
-        <a href="https://www.night-roulette.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+        <a href="http://www.night-roulette.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
       </div>
     </div>
   </div>
 </div>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
