--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -24,12 +24,12 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
-.banner a {
+#nav-link {
   color:  #1F2041;
   text-shadow: white 0px 0px 10px;
 }
 
-.banner a:hover {
+#nav-link:hover {
   /*color: #1F2041;*/
   color: #4B3F72;
 }
@@ -40,3 +40,8 @@
   font-size: 24px;
 }
 
+// #contact {
+//   color: white;
+//   -webkit-transition: background 0.3s ease;
+//     transition: background 0.3s ease;
+// }
