--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,16 +2,17 @@
 <!-- Banner Section -->
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2978&q=80);">
   <div class="nav-links">
-    <a class="nav-link" href="#bio">About</a>
-    <a class="nav-link" href="#portfolio">Portfolio</a>
-    <a class="nav-link" href="#contact">Contact</a>
-    <%= link_to "Resume", asset_path('ryanmansfield-cv.pdf'), target: "blank", class: "nav-link" %>
+    <a class="nav-link"  id="nav-link" href="#bio">About</a>
+    <a class="nav-link"  id="nav-link" href="#portfolio">Portfolio</a>
+    <a class="nav-link"  id="nav-link" href="#contact">Contact</a>
+    <%= link_to "Resume", asset_path('ryanmansfield-cv.pdf'), target: "blank", class: "nav-link", id: "nav-link"%>
 
   </div>
   <div class="container">
     <h1>Ryan Mansfield</h1>
     <p>Full Stack Web Developer</p>
-    <a class="btn btn-flat" href="#contact">Email Me</a>
+
+    <a class="btn btn-flat" id="contact"  href="#contact">Email Me</a>
   </div>
 </div>
 
