cocktail card updated

--- a/app/views/pages/_cocktailCard.html.erb
+++ b/app/views/pages/_cocktailCard.html.erb
@@ -1,15 +1,15 @@
 <div data-aos="zoom-out-up"
      data-aos-duration="2000">
   <div class="card">
-     <%= image_tag("mr-cocktail.png", :alt => "mr-cocktail") %>
+     <%= image_tag("art-of-cocktails.png", :alt => "art of cocktails") %>
     <div class="card-info">
       <h2>Cocktail Recipe Book</h2>
-      <p><i>Web app built with Rails.  This app allows a user to create a cocktail, and add ingredients to it.</i></p>
+      <p><i>CRUD Web app built with Rails.  This app allows a user to create a cocktail, and add ingredients to it.  It includes PG search, photo upload, select2, jQuery bar rating, and AOS.</i></p>
       <div class="card-action">
      <!--   <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#cocktail-modal">
           View More
         </button> -->
-        <a href="https://mister-ryan-cocktail.herokuapp.com/cocktails" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+        <a href="https://art-of-cocktails.herokuapp.com/cocktails" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
       </div>
     </div>
   </div>
