cocktail card updated

--- a/app/views/pages/_cocktailCard.html.erb
+++ b/app/views/pages/_cocktailCard.html.erb
@@ -3,8 +3,8 @@
   <div class="card">
      <%= image_tag("art-of-cocktails.png", :alt => "art of cocktails") %>
     <div class="card-info">
-      <h2>Cocktail Recipe Book</h2>
-      <p><i>CRUD Web app built with Rails.  This app allows a user to create a cocktail, and add ingredients to it.  It includes PG search, photo upload, select2, jQuery bar rating, and AOS.</i></p>
+      <h2>Art of Cocktails</h2>
+      <p><i>CRUD Web app built with Rails.  This app allows a user to create and update cocktails recipes by adding ingredients and instructions, users can also review and rate recipes.  It includes PG search, photo upload, select2, jQuery bar rating, and AOS.</i></p>
       <div class="card-action">
      <!--   <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#cocktail-modal">
           View More
